--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,7 +46,7 @@ nav span {
 
 .missiontext {
   background-color: black;
-  width: 1200px;
+  min-width: 1200px;
 
   }
 
@@ -68,4 +68,33 @@ justify-content: center;
 
 .tea-images div {
   margin: 10px 15px;
+}
+
+#locations {
+  background: url("../../resources/images/img-locations-background.jpg") no-repeat top right;
+  margin: 0 auto;
+  height: 500px;
+  width: 1200px;
+  }
+
+#locations h2{
+  padding-top: 75px;
+  margin-bottom: unset;
+}
+
+.loc-boxes {
+  display: flex;
+  justify-content: center;
+
+}
+
+.box {
+  background-color: black;
+  min-width: 300px;
+  margin: 15px 20px;
+  opacity: 1;
+}
+
+.box h3, p {
+  padding: 10px 0;
 }
