--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,6 +4,7 @@ body, a {
   color: seashell;
   background-color: black;
   opacity: 0.9;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
   text-align: center;
   margin: 0;
 }
@@ -15,9 +16,15 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-color: black;
   z-index: 5;
 }
@@ -41,8 +48,12 @@ nav span {
   height: 700px;
   width: 1200px;
   background-image: url("../../resources/images/img-mission-background.jpg");
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .missiontext {
@@ -63,9 +74,14 @@ nav span {
 }
 
 .tea-images {
+display: -webkit-box;
+display: -ms-flexbox;
 display: flex;
-flex-wrap: wrap;
-justify-content: center;
+-ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+-webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
 }
 
 .tea-images div {
@@ -82,13 +98,16 @@ justify-content: center;
 
 #locations h2{
   padding-top: 75px;
-  margin-bottom: unset;
 
 }
 
 .loc-boxes {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 
 }
 
@@ -97,6 +116,7 @@ justify-content: center;
   min-width: 300px;
   margin: 15px 20px;
   opacity: 1;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
 }
 
 .box h3, p {
